Bug 161913 - Right-clicking in search results list should not reset selection
Summary: Right-clicking in search results list should not reset selection
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.9.50
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-05-10 19:08 UTC by Jure Repinc
Modified: 2008-05-16 19:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jure Repinc 2008-05-10 19:08:28 UTC
Version:           1.9.50 (using Devel)
Installed from:    Compiled sources
Compiler:          GCC 4.2.3 AMD64
OS:                Linux

This is with KMail from trunk - kdepimlibs 806131, kdelibs 806185

Steps to reproduce:
1. open Find Messages dialog
2. search for something which returns many results
3. select all results (with Ctrl+A for example)
4. right click on the selected messages to oprate on them

Result:
The selection gets cleared and only the message you right-clicked on gets selected.

Expected:
All the messages should remain selected so you can operate on all of them at once.
Comment 1 Thomas McGuire 2008-05-16 19:18:53 UTC
SVN commit 808454 by tmcguire:

Don't reset the selection on right click.

BUG: 161913


 M  +5 -2      searchwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=808454