Don't reset the selection on right click.

BUG: 161913

svn path=/trunk/KDE/kdepim/; revision=808454